refactor: renombrar componente de historial familiar a historial médico infantil y actualizar rutas

--- a/translations/es.json
+++ b/translations/es.json
@@ -11,6 +11,7 @@
   "add": "Agregar",
   "addCase": "Agregar caso",
   "addCredControl": "Agregar Control CRED",
+  "addData": "Add data",
   "additionalHealthServices": "Prestaciones Adicionales de Salud",
   "additionalNotes": "Notas Adicionales",
   "addNewVaccine": "Agregar nueva vacuna",
@@ -34,6 +35,7 @@
   "all": "Todos",
   "allergies": "Allergies",
   "alturaUterina": "Altura Uterina (cm)",
+  "amnioticFluid": "Amniotic Fluid",
   "analPermeability": "Permeabilidad Anal",
   "analPermeabilityOther": "Otros para permeabilidad",
   "Anamnesis": "Anamnesis",
@@ -45,6 +47,10 @@
   "antecedentesFamiliares": "Antecedentes Familiares",
   "antecedentesPersonales": "Antecedentes Personales",
   "antenatalCare": "Control Prenatal",
+  "anthropometrics": "Datos Antropométricos del Recién Nacido",
+  "anthropometricsNowAvailable": "Ahora visibles en la página de Datos Antropométricos",
+  "anthropometricsRecorded": "Datos Antropométricos registrados",
+  "anthropometricsSaveError": "Error guardando los datos antropométricos",
   "apgarScore": "Puntaje Apgar",
   "appointmentCancelError": "Error al cancelar la cita",
   "appointmentCancelled": "Cita cancelada",
@@ -147,8 +153,10 @@
   "currentAge": "Edad Actual",
   "customViews": "En esta sección encontrará vistas clínicas personalizadas según las condiciones del paciente y los programas de atención.",
   "dangerSigns": "Danger Signs",
+  "dataDisplayed": "Data displayed",
   "dataNowAvailable": "They are now visible on the Perinatal Register",
   "dataSaved": "Data has been saved successfully.",
+  "dataTabs": "Data selection tabs",
   "date": "Fecha",
   "dateAndTime": "Fecha y Hora",
   "dateDate": "Fecha y Hora",
@@ -175,6 +183,7 @@
   "deliveryLocation": "Lugar del parto",
   "deliveryOrAbortion": "Parto o aborto",
   "deliveryOutcome": "Resultado del Parto",
+  "deliveryType": "Delivery Type",
   "demographics": "Datos Demográficos",
   "department": "Departamento",
   "deposicionesGramos": "Deposiciones (g)",
@@ -182,6 +191,9 @@
   "diabetes": "Diabetes",
   "diagnoses": "Diagnoses",
   "Diagnóstico": "Diagnóstico",
+  "diastolic": "Diastolic",
+  "diastolicBP": "Diastolic BP (mmHg)",
+  "dilatation": "Dilatation (cm)",
   "disabilities": "Discapacidades",
   "discard": "Descartar",
   "dischargeDate": "Fecha de Alta",
@@ -235,6 +247,7 @@
   "errorCreatingCondition": "Error creating condition",
   "errorDeletingCondition": "Error deleting condition",
   "errorFetchingbedInformation": "Error al obtener información de camas",
+  "errorLoading": "Error loading summary: ",
   "errorLoadingConcepts": "Error al cargar los conceptos de vacunación",
   "errorLoadingData": "Error loading data",
   "errorLoadingPatient": "Error al cargar los datos del paciente.",
@@ -283,6 +296,9 @@
   "firstName": "Nombre",
   "firstNamePlaceholder": "Primer Nombre",
   "fluidBalance": "Balance de Líquidos",
+  "fluidBalanceNowAvailable": "Ahora visible en la página de Balance de Líquidos",
+  "fluidBalanceRecorded": "Balance de Líquidos registrado",
+  "fluidBalanceSaveError": "Error guardando el balance de líquidos",
   "foetalPresentation": "Presentación Fetal",
   "followUpDate": "Próxima fecha de seguimiento",
   "fontanelle": "Fontanela",
@@ -351,6 +367,9 @@
   "ipvQuestions": "Preguntas IPV",
   "itemsPerPage": "Elementos por página",
   "labourAndDelivery": "Trabajo de Parto y Parto",
+  "labourDetails": "Labour Details",
+  "labourHistorySummary": "Detalles del Embarazo y Parto",
+  "labourMetricDisplayed": "Labour History Metric",
   "lactanciaMaterna": "Lactancia Materna",
   "lastName": "Apellido",
   "lastNamePlaceholder": "Apellidos",
@@ -376,7 +395,9 @@
   "married": "Married",
   "maternalCondition": "Condición Materna",
   "maternalHistory": "Antecedentes Maternos",
+  "maternalPulse": "Maternal Pulse (bpm)",
   "maternalSummary": "Resumen Materno",
+  "maternalWeight": "Maternal Weight (Kg)",
   "medicalHistory": "Historial Médico",
   "medicalHistoryFather": "Medical History of the Father",
   "medicalHistoryMother": "Medical History of the Mother",
@@ -552,6 +573,8 @@
   "puerperioInmediato": "Puerperio Inmediato",
   "PuerperioInmediato": "Puerperio Inmediato",
   "recommendedProcedure": "Procedimiento Recomendado",
+  "recordAnthropometrics": "Registrar Datos Antropométricos",
+  "recordFluidBalance": "Registrar Balance de Líquidos",
   "recordLabourDetails": "Registrar detalles del parto",
   "recordNewbornVitals": "Registrar signos vitales neonatales",
   "Referida": "Referida",
@@ -644,6 +667,7 @@
   "surgicalSummary": "Resumen Quirúrgico",
   "sutures": "Suturas",
   "systolic": "Sistólica",
+  "systolicBP": "Systolic BP (mmHg)",
   "systolicPressure": "Presión Sistólica (mmHg)",
   "tableView": "Vista de Tabla",
   "Talla": "Talla",
@@ -654,6 +678,7 @@
   "temperature": "Temperatura",
   "temperatureAbbreviated": "Temp.",
   "terminaciónGestaciónAnterior": "Terminación de Gestación Anterior",
+  "terminationDate": "Termination Date",
   "testApproach": "Enfoque de Prueba",
   "testDate": "Fecha de Prueba",
   "testEntryPoint": "Punto de Entrada",
@@ -686,6 +711,7 @@
   "updating": "Actualizando...",
   "urineCount": "Recuento de Orina",
   "urineGrams": "Volumen de Orina (g/mL)",
+  "uterineHeight": "Uterine Height (cm)",
   "uterusCondition": "Condición Uterina PPH",
   "uuid": "UUID",
   "vaccinationSchedule": "Calendario de Vacunación",
@@ -700,6 +726,7 @@
   "VExamenpélvico": "Examen Pélvico",
   "viewBeds": "Ver Camas",
   "viewEncounter": "Ver",
+  "viewSelector": "Select view type",
   "violencia": "Violencia",
   "visitaDomiciliaria": "Visita domiciliaria",
   "visitDate": "Fecha de Tamizaje",
