--- a/translations/en.json
+++ b/translations/en.json
@@ -11,6 +11,7 @@
   "add": "Add",
   "addCase": "Add Case",
   "addCredControl": "Add Wellchild Care Control",
+  "addData": "Add data",
   "additionalHealthServices": "Additional Health Services",
   "additionalNotes": "Any additional notes",
   "addNewVaccine": "Add New Vaccine",
@@ -34,6 +35,7 @@
   "all": "All",
   "allergies": "Allergies",
   "alturaUterina": "Uterine Height (cm)",
+  "amnioticFluid": "Amniotic Fluid",
   "analPermeability": "Permeabilidad Anal",
   "analPermeabilityOther": "Otros para permeabilidad",
   "Anamnesis": "Anamnesis",
@@ -45,6 +47,10 @@
   "antecedentesFamiliares": "Family History",
   "antecedentesPersonales": "Personal History",
   "antenatalCare": "Prenatal Care",
+  "anthropometrics": "Datos Antropométricos del Recién Nacido",
+  "anthropometricsNowAvailable": "Ahora visibles en la página de Datos Antropométricos",
+  "anthropometricsRecorded": "Datos Antropométricos registrados",
+  "anthropometricsSaveError": "Error guardando los datos antropométricos",
   "apgarScore": "Apgar Score",
   "appointmentCancelError": "Error Canceling Appointment",
   "appointmentCancelled": "Appointment Canceled",
@@ -147,8 +153,10 @@
   "currentAge": "Current Age",
   "customViews": "In this section you will find customized clinical views based on the patient's conditions and care programs.",
   "dangerSigns": "Danger Signs",
+  "dataDisplayed": "Data displayed",
   "dataNowAvailable": "They are now visible on the Perinatal Register",
   "dataSaved": "Data has been saved successfully.",
+  "dataTabs": "Data selection tabs",
   "date": "Date",
   "dateAndTime": "Date and Time",
   "dateDate": "Date and Time",
@@ -175,6 +183,7 @@
   "deliveryLocation": "Lugar del parto",
   "deliveryOrAbortion": "Parto o aborto",
   "deliveryOutcome": "Delivery Outcome",
+  "deliveryType": "Delivery Type",
   "demographics": "Demographics",
   "department": "Department",
   "deposicionesGramos": "Stool (g)",
@@ -182,6 +191,9 @@
   "diabetes": "Diabetes",
   "diagnoses": "Diagnoses",
   "Diagnóstico": "Diagnosis",
+  "diastolic": "Diastolic",
+  "diastolicBP": "Diastolic BP (mmHg)",
+  "dilatation": "Dilatation (cm)",
   "disabilities": "Disabilities",
   "discard": "Discard",
   "dischargeDate": "Discharge Date",
@@ -236,6 +248,7 @@
   "errorCreatingCondition": "Error creating condition",
   "errorDeletingCondition": "Error deleting condition",
   "errorFetchingbedInformation": "Error fetching bed information",
+  "errorLoading": "Error loading summary: ",
   "errorLoadingConcepts": "Error loading vaccination concepts",
   "errorLoadingData": "Error loading data",
   "errorLoadingPatient": "Error loading patient data.",
@@ -284,6 +297,9 @@
   "firstName": "First Name",
   "firstNamePlaceholder": "First name",
   "fluidBalance": "Fluid Balance",
+  "fluidBalanceNowAvailable": "Ahora visible en la página de Balance de Líquidos",
+  "fluidBalanceRecorded": "Balance de Líquidos registrado",
+  "fluidBalanceSaveError": "Error guardando el balance de líquidos",
   "foetalPresentation": "Fetal Presentation",
   "followUpDate": "Follow-Up Date",
   "fontanelle": "Fontanela",
@@ -352,6 +368,9 @@
   "ipvQuestions": "IPV Questions",
   "itemsPerPage": "Items per page",
   "labourAndDelivery": "Labour and Delivery",
+  "labourDetails": "Labour Details",
+  "labourHistorySummary": "Detalles del Embarazo y Parto",
+  "labourMetricDisplayed": "Labour History Metric",
   "lactanciaMaterna": "Breastfeeding",
   "lastName": "Last Name",
   "lastNamePlaceholder": "Last name",
@@ -377,7 +396,9 @@
   "married": "Married",
   "maternalCondition": "Maternal Condition",
   "maternalHistory": "Antecedentes Maternos",
+  "maternalPulse": "Maternal Pulse (bpm)",
   "maternalSummary": "Maternal Summary",
+  "maternalWeight": "Maternal Weight (Kg)",
   "medicalHistory": "Medical History",
   "medicalHistoryFather": "Medical History of the Father",
   "medicalHistoryMother": "Medical History of the Mother",
@@ -552,6 +573,8 @@
   "puerperioInmediato": "Puerperio Inmediato",
   "PuerperioInmediato": "Immediate Puerperium",
   "recommendedProcedure": "Recommended Procedure",
+  "recordAnthropometrics": "Registrar Datos Antropométricos",
+  "recordFluidBalance": "Registrar Balance de Líquidos",
   "recordLabourDetails": "Record Labor Details",
   "recordNewbornVitals": "Record Neonatal Vital Signs",
   "Referida": "Referred",
@@ -644,6 +667,7 @@
   "surgicalSummary": "Surgical Summary",
   "sutures": "Suturas",
   "systolic": "Systolic",
+  "systolicBP": "Systolic BP (mmHg)",
   "systolicPressure": "Systolic Pressure (mmHg)",
   "tableView": "Table View",
   "Talla": "Height",
@@ -654,6 +678,7 @@
   "temperature": "Temperature",
   "temperatureAbbreviated": "Temp.",
   "terminaciónGestaciónAnterior": "Previous Pregnancy Termination",
+  "terminationDate": "Termination Date",
   "testApproach": "Test Approach",
   "testDate": "Test Date",
   "testEntryPoint": "Test Entry Point",
@@ -686,6 +711,7 @@
   "updating": "Updating...",
   "urineCount": "Urine Count",
   "urineGrams": "Urine Volume (g/mL)",
+  "uterineHeight": "Uterine Height (cm)",
   "uterusCondition": "Uterine Condition PPH",
   "uuid": "UUID",
   "vaccinationSchedule": "Vaccination Schedule",
@@ -700,6 +726,7 @@
   "VExamenpélvico": "Pelvic Exam",
   "viewBeds": "View Beds",
   "viewEncounter": "View",
+  "viewSelector": "Select view type",
   "violencia": "Violence",
   "visitaDomiciliaria": "Visita domiciliaria",
   "visitDate": "Screening Date",
