--- a/translations/en.json
+++ b/translations/en.json
@@ -1,7 +1,7 @@
 {
   "Abdomen": "Abdomen",
   "abdomenCharacteristics": "Características del Abdomen",
-  "abnormalValue": "Valor anormal",
+  "abnormalValue": "Abnormal value",
   "accidentOrTrauma": "Accident or Trauma",
   "action": "Action",
   "actions": "Actions",
