--- a/translations/en.json
+++ b/translations/en.json
@@ -9,7 +9,7 @@
   "activeCases": "Active cases",
   "add": "Add",
   "addCase": "Add case",
-  "addCredControl": "Agregar Control CRED",
+  "addCredControl": "Add CRED control",
   "addData": "Add data",
   "additionalNotes": "Any additional notes",
   "addPNSContact": "Add PNS Contact",
