fix: agregar traducción para "hola" en el archivo en.json

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "hola": "hola",
   "Abdomen": "Abdomen",
   "abdomenCharacteristics": "Características del Abdomen",
   "abnormalValue": "Abnormal value",
