--- a/translations/en.json
+++ b/translations/en.json
@@ -1,7 +1,7 @@
 {
   "hola": "hola",
   "Abdomen": "Abdomen",
-  "abdomenCharacteristics": "Características del Abdomen",
+  "abdomenCharacteristics": "Abdomen Characteristics",
   "abnormalValue": "Abnormal value",
   "accidentOrTrauma": "Accident or Trauma",
   "action": "Action",
@@ -17,32 +17,32 @@
   "addRelationship": "Add relationship",
   "address": "Address",
   "addressPlaceholder": "Physical Address/Landmark",
-  "addVaccine": "Agregar Vacuna",
+  "addVaccine": "Add vaccine",
   "admissionDate": "Admission Date",
   "admissionWard": "Admission Ward",
   "admittingDoctor": "Admitting Doctor",
   "affection": "Does the child receive affection?",
   "age": "Age",
-  "ageGroupDetails": "Detalles del grupo de edad",
-  "ageRange": "{{min}}-{{max}} m",
+  "ageGroupDetails": "Age group details",
+  "ageRange": "Age range",
   "agreements": "Agreements and Commitments",
   "alcoholUse": "Alcohol Use",
   "alcoholUseDuration": "Alcohol Use Duration",
   "alive": "Alive",
   "all": "All",
-  "alturaUterina": "Altura Uterina (cm)",
+  "alturaUterina": "Fundal height (cm)",
   "amnioticFluid": "Amniotic Fluid",
-  "analPermeability": "Permeabilidad Anal",
-  "analPermeabilityOther": "Otros para permeabilidad",
+  "analPermeability": "Anal Permeability",
+  "analPermeabilityOther": "Other for anal permeability",
   "Anamnesis": "Anamnesis",
-  "antecedentes": "",
-  "Antecedentes": "Antecedentes",
+  "antecedentes": "Medical history",
+  "Antecedentes": "Medical history",
   "antenatalCare": "Prenatal Care",
-  "anthropometrics": "Datos Antropométricos del Recién Nacido",
-  "anthropometricsNowAvailable": "Ahora visibles en la página de Datos Antropométricos",
-  "anthropometricsRecorded": "Datos Antropométricos registrados",
-  "anthropometricsSaveError": "Error guardando los datos antropométricos",
-  "apgarScore": "Puntuación APGAR",
+  "anthropometrics": "Newborn Anthropometric Measurements",
+  "anthropometricsNowAvailable": "Visible in Anthropometric Measurements page",
+  "anthropometricsRecorded": "Anthropometric Data Recorded",
+  "anthropometricsSaveError": "Error saving anthropometric data",
+  "apgarScore": "APGAR Score",
   "appointmentCancelError": "Error cancelling appointment",
   "appointmentCancelled": "Appointment cancelled",
   "appointmentCancelledSuccessfully": "Appointment cancelled successfully",
@@ -51,12 +51,12 @@
   "appointments": "Appointments",
   "appointmentToFulfill": "Select appointment to fulfill",
   "appointmentType": "Appointment type",
-  "AtencionesPrenatales": "Atenciones Prenatales",
-  "AtencionesPuerperio": "Atenciones Puerperio",
+  "AtencionesPrenatales": "Prenatal Care",
+  "AtencionesPuerperio": "Postpartum Care",
   "attendedBy": "Attended By",
   "babyGivenVitaminD": "Baby Given Vitamin K",
   "back": "Back",
-  "balanceOverview": "Balance de Líquidos",
+  "balanceOverview": "Fluid Balance",
   "baselineHivStatus": "Baseline HIV Status",
   "baselineInformation": "Baseline Information",
   "baselineStatus": "HIV Status",
@@ -71,7 +71,7 @@
   "cancelAppointment": "Cancel appointment",
   "cancelAppointmentModalConfirmationText": "Are you sure you want to cancel this appointment?",
   "cannotDrink": "Cannot drink or breastfeed",
-  "característicaLoquios": "Característica Loquios",
+  "característicaLoquios": " Loquios characteristic",
   "caregiver": "Who takes care of the child?",
   "caseEncounter": "Case management encounters",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
@@ -79,7 +79,7 @@
   "caseManager": "Case Manager",
   "category": "Category",
   "causeOfDeath": "Cause of Death",
-  "cephaloCaudalNeurologicalEvaluation": "Evaluación Céfalocaudal y Neurológica del Recién Nacido",
+  "cephaloCaudalNeurologicalEvaluation": "Cephalocaudal and Neurological Evaluation of the Newborn",
   "cervicalDilation": "Cervical Dilation cm",
   "chartView": "Chart View",
   "checkFilters": "Check the filters above",
@@ -87,13 +87,13 @@
   "chestCircumference": "Chest Circumference",
   "chooseOption": "Choose option",
   "chronicDisease": "Chronic Disease",
-  "clavicle": "Clavícula",
+  "clavicle": "Clavicle,
   "clientEligibility": "Eligible",
   "clinicalEncounter": "Clinical Encounter",
   "clinicalStatus": "Clinical status",
   "clinicalStatusRequired": "A clinical status is required",
   "clinicalViews": "Clinical views",
-  "completedCheckups": "Controles realizados",
+  "completedCheckups": "Checkups Completed",
   "condition": "Condition",
   "conditional": "Conditional",
   "conditionDeleted": "Condition deleted",
@@ -102,7 +102,7 @@
   "conditions": "Conditions",
   "conditionSaved": "Condition saved",
   "conditionUpdated": "Condition updated",
-  "confirmAppointment": "Confirmar Cita",
+  "confirmAppointment": "Appointment confirmation",
   "confirmationQuestion": "Are you sure you want to delete relationship?",
   "consultationDate": "Consultation Date",
   "consultationDetails": "Consultation Details",
@@ -113,23 +113,23 @@
   "contactCreated": "Contact created",
   "contacted": "Contacted",
   "contactList": "Contact list",
-  "Controles": "Controles",
-  "controlPuerperio": "Control Puerperio",
-  "cordClamping": "Clampeo del cordón",
+  "Controles": "Checkups",
+  "controlPuerperio": "Postpartum Checkups",
+  "cordClamping": "Cord Clamping",
   "createPatient": "Create patient",
-  "credSchedule": "Seguimiento CRED",
-  "Cuidado prenatal": "Cuidado prenatal",
-  "Current pregnancy": "Embarazo actual",
-  "currentAge": "Edad actual",
+  "credSchedule": " CRED Schedule",
+  "Cuidado prenatal": "Prenatal Care",
+  "Current pregnancy": "Current pregnancy",
+  "currentAge": "Current age",
   "customViews": "In this section, you'll find custom clinical views tailored to patients' conditions and enrolled care programs.",
   "dangerSigns": "Danger Signs",
   "dataDisplayed": "Data displayed",
   "dataNowAvailable": "They are now visible on the Perinatal Register",
   "dataSaved": "Data has been saved successfully.",
   "dataTabs": "Data selection tabs",
-  "date": "Fecha Programada",
+  "date": "Schrduled date",
   "dateOfBirth": "Date of birth",
-  "dateOfBirthPlaceholder": "mm/dd/yyyy",
+  "dateOfBirthPlaceholder": "Date of Birth Placeholder",
   "dateOfDelivery": "Date of Delivery",
   "dateofend": "End Date",
   "dateOfOnset": "Date of onset",
@@ -142,13 +142,13 @@
   "deleteModalConfirmationText": "Are you sure you want to delete this condition?",
   "deleteRelationship": "Delete Relationship",
   "deleting": "Deleting",
-  "deliveryOrAbortion": "Parto o aborto",
+  "deliveryOrAbortion": "Delivery or Abortion",
   "deliveryType": "Delivery Type",
   "demographics": "Demographics",
   "department": "Department",
   "descentOfHead": "Descent of Head",
-  "diagnoses": "Diagnoses",
-  "Diagnóstico": "Diagnóstico",
+  "diagnoses": "Diagnosis",
+  "Diagnóstico": "Diagnosis",
   "diastolic": "Diastolic",
   "diastolicBP": "Diastolic BP (mmHg)",
   "dilatation": "Dilatation (cm)",
@@ -160,24 +160,24 @@
   "discontinue": "Discontinue",
   "discontinued": "Discontinued",
   "dose": "Dosis",
-  "dueAt": "A los",
-  "ears": "Orejas",
-  "earsImplantationOther": "Otros para implantación",
-  "earsOther": "Otros para orejas",
-  "earsPositionOther": "Otros para ubicación",
-  "ecografia": "Ecografía de obstetricia",
-  "edadGestacional": "Edad Gestacional (semanas)",
-  "edadGestacionalEcografia": "Edad gestacional en semanas según ecografía",
-  "edemaGestacional": "Edema gestacional",
+  "dueAt": " Due at",
+  "ears": "Ears",
+  "earsImplantationOther": "Other for implantation",
+  "earsOther": "Other for ears",
+  "earsPositionOther": "Other for position",
+  "ecografia": "Obstetric Ultrasound",
+  "edadGestacional": "Gestational Age (weeks)",
+  "edadGestacionalEcografia": "Gestational Age in Weeks According to Ultrasound",
+  "edemaGestacional": "Gestational Edema",
   "edit": "Edit",
   "editAppointment": "Edit an appointment",
   "editCondition": "Edit a Condition",
   "editDose": "Edit Dose Details",
   "editEncounter": "Edit",
   "editForm": "Edit Form",
-  "edith": "Editar",
-  "embarazoActual": "Embarazo Actual",
-  "EmbarazoActual": "Embarazo Actual",
+  "edith": "Edit",
+  "embarazoActual": "Current pregnancy",
+  "EmbarazoActual": "Current pregnancy",
   "encounterDate": "Date",
   "encounterDeleted": "Encounter deleted",
   "encounterDetails": "Encounter details",
@@ -186,7 +186,7 @@
   "endRelationship": "End relationship",
   "enrolled": "Enrolled",
   "enterCondition": "Enter condition",
-  "enterText": "Ingrese texto",
+  "enterText": "Enter text",
   "enterValue": "Enter value",
   "error": "Error",
   "errorCreatingCondition": "Error creating condition",
@@ -194,51 +194,51 @@
   "errorLoading": "Error loading summary: ",
   "errorLoadingConcepts": "Error loading vaccination concepts",
   "errorLoadingData": "Error loading data",
-  "errorLoadingPatient": "Error cargando los datos del paciente.",
+  "errorLoadingPatient": "Error Loading Patient Data",
   "errorUpdatingCondition": "Error updating condition",
-  "esophagus": "Permeabilidad Esófago",
-  "EstadoAdministraciónVitaminaA": "Estado de administración de vitamina A",
-  "EstadoGeneral": "Estado General",
-  "evolucionYMonitorizacion": "Evolución Y Monitorización",
-  "examenFísicoTórax": "Examen Físico de Tórax",
-  "ExamenGenitalesExternos": "Examen Genitales Externos",
-  "examenPezon": "Examen de pezón",
+  "esophagus": "Esophageal Patency",
+  "EstadoAdministraciónVitaminaA": "Vitamin A Administration Status",
+  "EstadoGeneral": "General Condition",
+  "evolucionYMonitorizacion": "Progress and Monitoring",
+  "examenFísicoTórax": "Chest Physical Examination",
+  "ExamenGenitalesExternos": "External Genital Examination",
+  "examenPezon": "Nipple Examination",
   "failedDeleting": "couldn't be deleted",
-  "family": "Familia",
+  "family": "Family",
   "familyContacts": "Family contacts",
   "familyRelationshipFormTitle": "Family Relationship Form",
   "fatherInvolvement": "Does the father participate in care?",
-  "fechaYHoraAtencion": "Fecha y hora atención",
+  "fechaYHoraAtencion": "Date and Time of the Appointment",
   "feedingOrders": "Feeding Orders",
   "female": "Female",
   "fetalHeartRate": "Fetal Heart Rate",
-  "field": "Campo",
+  "field": "Field",
   "filterByForm": "Filter by form",
   "filterTable": "Filter table",
   "finalDiagnosis": "Final Diagnosis",
   "finalDischargeDiagnosis": "Final Discharge Diagnosis",
   "finalOutcome": "Final Outcome",
-  "FirmaYSello": "Firma y Sello",
+  "FirmaYSello": "Signature and Stamp",
   "firstName": "First name",
   "firstNamePlaceholder": "First name",
-  "fluidBalance": "Balance de Líquidos",
-  "fluidBalanceNowAvailable": "Ahora visible en la página de Balance de Líquidos",
-  "fluidBalanceRecorded": "Balance de Líquidos registrado",
-  "fluidBalanceSaveError": "Error guardando el balance de líquidos",
+  "fluidBalance": "Fluid Balance",
+  "fluidBalanceNowAvailable": "Now Visible on the Fluid Balance Page",
+  "fluidBalanceRecorded": " Fluid Balance Recorded",
+  "fluidBalanceSaveError": "Error Saving Fluid Balance",
   "foetalPresentation": "Foetal Presentation",
   "followUpDate": "Follow Up Date",
-  "fontanelle": "Fontanela",
-  "fontanelleOther": "Otros para fontanela",
+  "fontanelle": "Fontanelle",
+  "fontanelleOther": "Other (Fontanelle)",
   "formTitle": "Fill in the form details",
-  "frecuenciaCardiaca": "Frecuencia Cardíaca",
-  "frecuenciaCardíaca": "Frecuencia Cardíaca",
-  "frecuenciaCardiacaFetal": "Frecuencia cardiaca fetal (por min.)",
+  "frecuenciaCardiaca": "Heart Rate",
+  "frecuenciaCardíaca": "Heart Rate",
+  "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
   "fromAge": "From Age",
-  "gananciaPeso": "Ganancia de peso",
+  "gananciaPeso": "Weight Gain",
   "genderPreselected": "Gender is pre-selected based on the profile",
-  "genitourinary": "Genito Urinario",
-  "genitourinaryElimination": "Eliminación Genito Urinario",
-  "genitourinaryEliminationOther": "Otros para eliminación",
+  "genitourinary": "Genitourinary",
+  "genitourinaryElimination": "Genitourinary",
+  "genitourinaryEliminationOther": "Other (Elimination)",
   "gestationalAge": "Gestational Age (weeks)",
   "gestationalSize": "Gestational Size",
   "gravidez": "Gravidez",
