update in translations

--- a/translations/es.json
+++ b/translations/es.json
@@ -269,7 +269,6 @@
   "inPatientSummary": "En resumen del paciente",
   "involuciónUterina": "Involucrada en uterina",
   "ipvOutcome": "Resultado de IPV",
-  "ipvOutCome": "Resultado de IPV",
   "ipvQuestions": "Preguntas de IPV",
   "itemsPerPage": "Elementos por página",
   "labourDetails": "Detalles laborales",
@@ -309,7 +308,7 @@
   "muscleTone": "Tono musculoso",
   "muscleToneOther": "Otros para tono muscular",
   "name": "Nombre",
-  "names": "Nómbres",
+  "names": "Nombres",
   "neck": "Cuello",
   "neckOther": "Otros para cuello",
   "neonatalAbnormalities": "Anormalidadas neonatales",
@@ -320,11 +319,11 @@
   "neurologicalEvaluationOther": "Otros para valoración neurológica",
   "newbornAntropometrics": "Somatrometría",
   "newCredEncounter": "Creditiva de control de Nuevo",
-  "next": "Sigón",
+  "next": "Siguiente",
   "nextAppointment": "Siguiente Cita",
-  "nextMonth": "Sguive mes",
+  "nextMonth": "Siguiente mes",
   "nextVisitDate": "Siguiente Fecha de Visita",
-  "nipples": "Mamilas",
+  "nipples": "Pezones",
   "no": "No",
   "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
   "noBreastfeeding": "No quiere amamantar ni chupar",
@@ -408,9 +407,7 @@
   "prenatalAntecedents": "Antecedentes prenatales",
   "presentación": "Presentación (C/P/Na)",
   "presionDiastolica": "Presión Diastólica",
-  "presiónDiastólica": "Presión Diastólica",
   "presionSistolica": "Presión Sistólica",
-  "presiónSistólica": "Presión Sistólica",
   "prev": "Previsamente",
   "previousMonth": "Mes anterior",
   "primaryDiagnosis": "Diagnóstico primario",
