fix: corregir la clave de traducción 'ProximaCita' a 'proximaCita' y mejorar la consistencia en las traducciones

--- a/translations/en.json
+++ b/translations/en.json
@@ -413,8 +413,7 @@
   "print": "Print",
   "priorityOfAdmission": "Priority Of Admission",
   "proteinuriaGestacional": "Proteinuria gestacional",
-  "proximaCita": "Próxima cita",
-  "ProximaCita": "Próxima cita",
+  "proximaCita": "Next Appointment",
   "psychomotorDevelopment": "Psychomotor Development",
   "puerperioInmediato": "Puerperio Inmediato",
   "PuerperioInmediato": "Puerperio Inmediato",
