--- a/translations/es.json
+++ b/translations/es.json
@@ -272,7 +272,7 @@
   "ipvQuestions": "Preguntas de IPV",
   "itemsPerPage": "Elementos por página",
   "labourDetails": "Detalles laborales",
-  "labourHistorySummary": "Detalla del embarazo y paro",
+  "labourHistorySummary": "Detalles del Embarazo y Parto",
   "labourMetricDisplayed": "Métrica de historia laboral",
   "lastName": "Apellido",
   "lastNamePlaceholder": "Apellido",
@@ -415,7 +415,6 @@
   "priorityOfAdmission": "Prioridad de admisión",
   "proteinuriaGestacional": "Proteinuria gestacional",
   "proximaCita": "Próxima Cita",
-  "ProximaCita": "Próxima Cita",
   "psychomotorDevelopment": "Desarrollo psicomotor",
   "puerperioInmediato": "Puerperio en Medediato",
   "PuerperioInmediato": "Puerperio en Medediato",
