fix: corregir formato de la clave de traducción 'temperature' en inglés y español

--- a/translations/en.json
+++ b/translations/en.json
@@ -489,8 +489,7 @@
   "tableView": "Table View",
   "Talla": "Talla (cm)",
   "tbScreening": "TB screening outcome",
-  "temperatura": "Temperatura (C°)",
-  "temperature": "Temperature (°C)",
+  "temperature": "Temperature °C",
   "terminationDate": "Termination Date",
   "testApproach": "Approach",
   "testDate": "Test Date",
