--- a/translations/es.json
+++ b/translations/es.json
@@ -490,8 +490,7 @@
   "tableView": "Vista de mesa",
   "Talla": "Talla (CM)",
   "tbScreening": "Resultado de detección de TB",
-  "temperatura": "Temperatura (c°)",
-  "temperature": "Temperatura (°C)",
+  "temperature": "Temperatura °C",
   "terminationDate": "Fecha de terminación",
   "testApproach": "Acercarse",
   "testDate": "Fecha de prueba",
