fix: agregar traducciones para 'Year' y 'Years' en inglés

--- a/translations/en.json
+++ b/translations/en.json
@@ -536,7 +536,7 @@
   "vomiting": "Vomits everything",
   "weight": "Weight (kg)",
   "wellChildControls": "Well Child Controls",
-  "Year": "",
-  "Years": "",
+  "Year": "Year",
+  "Years": "Years",
   "yes": "Yes"
 }
