fix: corregir la traducción de 'antecedentes' a 'Medical History' en inglés y eliminar duplicado en español

--- a/translations/en.json
+++ b/translations/en.json
@@ -34,8 +34,7 @@
   "analPermeability": "Anal Permeability",
   "analPermeabilityOther": "Other for anal permeability",
   "Anamnesis": "Anamnesis",
-  "antecedentes": "Medical history",
-  "Antecedentes": "Medical history",
+  "antecedentes": "Medical History",
   "antenatalCare": "Prenatal Care",
   "anthropometrics": "Newborn Anthropometric Measurements",
   "anthropometricsNowAvailable": "Visible in Anthropometric Measurements page",
