fix: agregar traducciones para 'conditionDeletedSuccessfully' y 'unknownError' en inglés y español, y corregir formato en 'checkForValidity' y 'presionSistolica'

--- a/translations/en.json
+++ b/translations/en.json
@@ -95,6 +95,7 @@
   "condition": "Condition",
   "conditional": "Conditional",
   "conditionDeleted": "Condition deleted",
+  "conditionDeletedSuccessfully": "The condition has been deleted successfully",
   "conditionNowVisible": "It is now visible on the Conditions page",
   "conditionRequired": "A condition is required",
   "conditions": "Conditions",
@@ -508,6 +509,7 @@
   "typeOfSurgery": "Type of Surgery",
   "umbilicalCord": "Cordón Umbilical",
   "unknown": "Unknown",
+  "unknownError": "An unknown error occurred",
   "unsavedChanges": "Unsaved Changes",
   "upcoming": "Upcoming",
   "upcomingAppointments": "Upcoming appointments",
