--- a/translations/es.json
+++ b/translations/es.json
@@ -81,7 +81,7 @@
   "cervicalDilation": "Dilación cervical CM",
   "chartView": "Vista de la tabla",
   "checkFilters": "Verifique los filtros anteriores",
-  "checkForValidity": "Algunos de los valores ingresados ​​pueden no ser válidos",
+  "checkForValidity": "Algunos de los valores ingresados \u200b\u200bpueden no ser válidos",
   "chestCircumference": "Circunferencia del pecho",
   "chooseOption": "Elija la opción",
   "chronicDisease": "Enfermedad crónica",
@@ -95,6 +95,7 @@
   "condition": "Condición",
   "conditional": "Condicional",
   "conditionDeleted": "Condición eliminada",
+  "conditionDeletedSuccessfully": "The condition has been deleted successfully",
   "conditionNowVisible": "Ahora es visible en la página de condiciones",
   "conditionRequired": "Se requiere una condición",
   "conditions": "Condiciones",
@@ -407,6 +408,7 @@
   "presentación": "Presentación (C/P/Na)",
   "presionDiastolica": "Presión Diastólica",
   "presionSistolica": "Presión Sistólica",
+  "presionSistolica": "Presión sistólica",
   "prev": "Previsamente",
   "previousMonth": "Mes anterior",
   "primaryDiagnosis": "Diagnóstico primario",
@@ -509,6 +511,7 @@
   "typeOfSurgery": "Tipo de cirugía",
   "umbilicalCord": "Cordón umbilical",
   "unknown": "Desconocido",
+  "unknownError": "An unknown error occurred",
   "unsavedChanges": "Cambios no guardados",
   "upcoming": "Próximo (duda)",
   "upcomingAppointments": "Próximas citas",
