feat: mejorar la tabla de resumen del paciente y actualizar estilos

--- a/translations/en.json
+++ b/translations/en.json
@@ -35,6 +35,7 @@
   "analPermeabilityOther": "Other for anal permeability",
   "Anamnesis": "Anamnesis",
   "antecedentes": "Medical History",
+  "Antecedentes": "Antecedentes",
   "antenatalCare": "Prenatal Care",
   "anthropometrics": "Newborn Anthropometric Measurements",
   "anthropometricsNowAvailable": "Visible in Anthropometric Measurements page",
@@ -125,6 +126,7 @@
   "dataDisplayed": "Data displayed",
   "dataNowAvailable": "They are now visible on the Perinatal Register",
   "dataSaved": "Data has been saved successfully.",
+  "dataTable": "Data table",
   "dataTabs": "Data selection tabs",
   "date": "Schrduled date",
   "dateOfBirth": "Date of birth",
@@ -282,6 +284,7 @@
   "listingDate": "Listing date",
   "livingWithClient": "Living with client",
   "loading": "Loading...",
+  "loadingData": "Loading data",
   "loadingEncounters": "Cargando encuentros...",
   "loadingPatient": "Cargando paciente...",
   "location": "Location",
@@ -407,6 +410,7 @@
   "presentación": "Presentación (C/P/NA)",
   "presionDiastolica": "Presión diastólica",
   "presionSistolica": "Presión sistólica",
+  "presiónSistólica": "Presión sistólica",
   "prev": "Prev",
   "previousMonth": "Previous month",
   "primaryDiagnosis": "Primary Diagnosis",
@@ -425,6 +429,7 @@
   "referrals": "Referrals",
   "reflejoOsteotendinoso": "Reflejo osteotendinoso",
   "reflexIrritability": "Irritabilidad refleja",
+  "refreshing": "Refreshing...",
   "relation": "Relation",
   "relationship": "Relationship",
   "relationshipConfirmationText": "This will end the relationship. Are you sure you want to proceed?",
@@ -489,6 +494,7 @@
   "tableView": "Table View",
   "Talla": "Talla (cm)",
   "tbScreening": "TB screening outcome",
+  "temperatura": "Temperatura (C°)",
   "temperature": "Temperature °C",
   "terminationDate": "Termination Date",
   "testApproach": "Approach",
