--- a/translations/es.json
+++ b/translations/es.json
@@ -35,6 +35,7 @@
   "analPermeabilityOther": "Otros para permeabilidad",
   "Anamnesis": "Anamnesia",
   "antecedentes": "Antecedentes",
+  "Antecedentes": "Antecedentes",
   "antenatalCare": "Cuidado prenatal",
   "anthropometrics": "Datos antropométricos del recién nacido",
   "anthropometricsNowAvailable": "Ahora Visibles en la Página de Datos Antropométricos",
@@ -125,6 +126,7 @@
   "dataDisplayed": "Datos mostrados",
   "dataNowAvailable": "Ahora son visibles en el registro perinatal",
   "dataSaved": "Los datos se han guardado con éxito.",
+  "dataTable": "Data table",
   "dataTabs": "Pestañas de selección de datos",
   "date": "Programada de fecha",
   "dateOfBirth": "Fecha de nacimiento",
@@ -282,6 +284,7 @@
   "listingDate": "Fecha de listado",
   "livingWithClient": "Viviendo con el cliente (duda)",
   "loading": "Cargando...",
+  "loadingData": "Loading data",
   "loadingEncounters": "Cargando Encuentros ...",
   "loadingPatient": "Cargando Paciente ...",
   "location": "Ubicación",
@@ -407,8 +410,8 @@
   "prenatalAntecedents": "Antecedentes prenatales",
   "presentación": "Presentación (C/P/Na)",
   "presionDiastolica": "Presión Diastólica",
-  "presionSistolica": "Presión Sistólica",
   "presionSistolica": "Presión sistólica",
+  "presiónSistólica": "Presión sistólica",
   "prev": "Previsamente",
   "previousMonth": "Mes anterior",
   "primaryDiagnosis": "Diagnóstico primario",
@@ -427,6 +430,7 @@
   "referrals": "Referencias",
   "reflejoOsteotendinoso": "Reflejo osteotendinoso",
   "reflexIrritability": "Refleja irritabilidad",
+  "refreshing": "Refreshing...",
   "relation": "Relación",
   "relationship": "Relación",
   "relationshipConfirmationText": "Esto terminará con la relación.¿Estás seguro de que quieres continuar?",
@@ -491,6 +495,7 @@
   "tableView": "Vista de mesa",
   "Talla": "Talla (CM)",
   "tbScreening": "Resultado de detección de TB",
+  "temperatura": "Temperatura (C°)",
   "temperature": "Temperatura °C",
   "terminationDate": "Fecha de terminación",
   "testApproach": "Acercarse",
