feat: corregir traducciones en inglés y español

--- a/translations/en.json
+++ b/translations/en.json
@@ -352,8 +352,7 @@
   "Nueva Atención Postnatal": "Nueva Atención Postnatal",
   "Nueva Atención Prenatal": "Nueva Atención Prenatal",
   "nutritionalStatus": "Nutritional Status",
-  "observación": "Observación",
-  "observation": "Observación",
+  "observation": "Observation",
   "observations": "Observations",
   "onDate": "On Date",
   "onsetDate": "Onset date",
