--- a/translations/es.json
+++ b/translations/es.json
@@ -162,7 +162,7 @@
   "discontinued": "Descontinuado",
   "dose": "Dosis",
   "dueAt": "Un Loss",
-  "ears": "Orej",
+  "ears": "Orejas",
   "earsImplantationOther": "Otros para implantacia",
   "earsOther": "Otros para ores",
   "earsPositionOther": "Otros para ubicació",
@@ -352,7 +352,6 @@
   "Nueva Atención Postnatal": "Nueva",
   "Nueva Atención Prenatal": "Nueva",
   "nutritionalStatus": "Estado nutricional",
-  "observación": "Observación",
   "observation": "Observación",
   "observations": "Observaciones",
   "onDate": "En la fecha",
