feat: corregir errores de traducción en inglés y español

--- a/translations/es.json
+++ b/translations/es.json
@@ -409,8 +409,7 @@
   "prenatalAntecedents": "Antecedentes prenatales",
   "presentación": "Presentación (C/P/Na)",
   "presionDiastolica": "Presión Diastólica",
-  "presionSistolica": "Presión sistólica",
-  "presiónSistólica": "Presión sistólica",
+  "presionSistolica": "Presión Sistólica",
   "prev": "Previsamente",
   "previousMonth": "Mes anterior",
   "primaryDiagnosis": "Diagnóstico primario",
