feat: actualizar traducciones de términos médicos en español

--- a/translations/es.json
+++ b/translations/es.json
@@ -83,7 +83,7 @@
   "chartView": "Vista de la tabla",
   "checkFilters": "Verifique los filtros anteriores",
   "checkForValidity": "Algunos de los valores ingresados \u200b\u200bpueden no ser válidos",
-  "chestCircumference": "Circunferencia del pecho",
+  "chestCircumference": "Perímetro Torácico (cm)",
   "chooseOption": "Elija la opción",
   "chronicDisease": "Enfermedad crónica",
   "clavicle": "Clavícula",
@@ -244,7 +244,7 @@
   "gravidez": "Gravidez",
   "growthChart": "Gráfico de crecimiento",
   "growthCondition": "Condición de crecimiento",
-  "headCircumference": "Circunferencia de la cabeza (CM)",
+  "headCircumference": "Perímetro Cefálico (cm)",
   "heartRate": "Frecuencia cardíaca (BPM)",
   "height": "Altura (cm)",
   "heridaOperatoria": "Operatoria de Herida",
