--- a/translations/en.json
+++ b/translations/en.json
@@ -241,15 +241,15 @@
   "genitourinaryEliminationOther": "Other (Elimination)",
   "gestationalAge": "Gestational Age (weeks)",
   "gestationalSize": "Gestational Size",
-  "gravidez": "Gravidez",
+  "gravidez": "Pregnancy",
   "growthChart": "Growth Chart",
   "growthCondition": "Growth Condition",
   "headCircumference": "Head Circumference (cm)",
   "heartRate": "Heart Rate (bpm)",
   "height": "Height (cm)",
-  "heridaOperatoria": "Herida Operatoria",
+  "heridaOperatoria": "Surgical wound",
   "hip": "Cadera",
-  "historiaClinicaObstetricaParto": "Historia Clínica Obstétrica de Parto",
+  "historiaClinicaObstetricaParto": "Obstetric delivery medical history",
   "hivStatus": "HIV Status",
   "hivTestResults": "HIV Status",
   "htsClinicalView": "HTS Clinical View",
@@ -258,35 +258,35 @@
   "htsScreening": "HTS Screening",
   "htsTestType": "Test type",
   "illnessDuration": "Duration of Illness",
-  "imc": "IMC - índice de masa corporal",
-  "immediateEvaluation": "Evaluación inmediata",
-  "immediateNewbornAttention": "Atención Inmediata del Recién Nacido",
+  "imc": "Body mass index (BMI)",
+  "immediateEvaluation": "Immediate evolution",
+  "immediateNewbornAttention": "Immediate newborn attention",
   "immunization": "Immunization",
   "immunizationPlanBuilder": "Immunization Plan Management",
   "inactive": "Inactive",
   "inactiveCases": "Inactive Cases",
-  "indicacionAcidoFolico": "Indicación Acido Fólico",
-  "indicacionCalcio": "Indicación Calcio",
-  "indicacionFierro": "Indicación Fierro/Acido Fólico",
+  "indicacionAcidoFolico": "Folic acid prescription",
+  "indicacionCalcio": "Calcium prescription",
+  "indicacionFierro": "Iron/folic acid prescription",
   "inPatientSummary": "In Patient Summary",
-  "involuciónUterina": "Involución Uterina",
+  "involuciónUterina": "Uterine involution",
   "ipvOutcome": "IPV Outcome",
   "ipvQuestions": "IPV Questions",
   "itemsPerPage": "Items per page",
   "labourDetails": "Labour Details",
-  "labourHistorySummary": "Detalles del Embarazo y Parto",
+  "labourHistorySummary": "Summary of labour history",
   "labourMetricDisplayed": "Labour History Metric",
   "lastName": "Last name",
   "lastNamePlaceholder": "Last name",
   "lethargy": "Lethargy or coma",
-  "limbs": "Extremidades",
-  "limbsOther": "Otros para extremidades",
+  "limbs": "Limbs",
+  "limbsOther": "Other fro limbs",
   "listingDate": "Listing date",
   "livingWithClient": "Living with client",
   "loading": "Loading...",
   "loadingData": "Loading data",
-  "loadingEncounters": "Cargando encuentros...",
-  "loadingPatient": "Cargando paciente...",
+  "loadingEncounters": "Loading encounters...",
+  "loadingPatient": "Loding Patient...",
   "location": "Location",
   "male": "Male",
   "malnutrition": "Severe visible malnutrition",
@@ -303,30 +303,30 @@
   "middleNamePlaceholder": "Middle name",
   "missedAppointmentDate": "Date Missed Appointment",
   "modeOfDelivery": "Mode of Delivery",
-  "months": "meses",
+  "months": "months",
   "motherGeneralCondition": "General condition",
-  "mouth": "Boca",
-  "mouthOther": "Otros para boca",
-  "movimientoFetal": "Movimiento fetal",
-  "muscleTone": "Tono Muscular",
-  "muscleToneOther": "Otros para tono muscular",
+  "mouth": "Mouth",
+  "mouthOther": "Other for mouth",
+  "movimientoFetal": "Fetal movement",
+  "muscleTone": "muscle tone",
+  "muscleToneOther": "Other for muscle tone",
   "name": "Name",
   "names": "Names",
-  "neck": "Cuello",
-  "neckOther": "Otros para cuello",
+  "neck": "Neck",
+  "neckOther": "Other for neck",
   "neonatalAbnormalities": "Neonatal Abnormalities",
-  "neonatalCounselery": "Consejeria",
+  "neonatalCounselery": "Neonatal Counselery",
   "neonatalProblems": "Neonatal Problems",
   "neonatalSummary": "Neonatal Summary",
-  "neurologicalEvaluation": "Valoración Neurológica",
-  "neurologicalEvaluationOther": "Otros para valoración neurológica",
-  "newbornAntropometrics": "Somatrometría",
-  "newCredEncounter": "Nuevo Control CRED",
+  "neurologicalEvaluation": "Neurological Evaluation ",
+  "neurologicalEvaluationOther": "Other for Neurological Evaluation",
+  "newbornAntropometrics": "Newborn Antropometrics",
+  "newCredEncounter": "New CRED Encounter",
   "next": "Next",
   "nextAppointment": "Next Appointment",
   "nextMonth": "Next month",
   "nextVisitDate": "Next visit date",
-  "nipples": "Mamilas",
+  "nipples": "nipples",
   "no": "No",
   "noActiveCasesToDisplay": "There is no active cases data to display.",
   "noBreastfeeding": "Does not want to breastfeed or suck",
@@ -343,14 +343,14 @@
   "noObservationsFound": "No observations found",
   "noPastAppointments": "There are no past appointments to display for this patient",
   "noResultsFor": "No results for",
-  "nose": "Nariz",
-  "noseOther": "Otros para nariz",
+  "nose": "nose",
+  "noseOther": "Other for nose",
   "nosologicalDiagnosis": "Nosological or Syndromic Diagnosis",
   "notes": "Notes",
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "There are no upcoming appointments to display for this patient",
-  "Nueva Atención Postnatal": "Nueva Atención Postnatal",
-  "Nueva Atención Prenatal": "Nueva Atención Prenatal",
+  "Nueva Atención Postnatal": "New Postnatal Care",
+  "Nueva Atención Prenatal": "New Prenatal Care",
   "nutritionalStatus": "Nutritional Status",
   "observation": "Observation",
   "observations": "Observations",
@@ -358,8 +358,8 @@
   "onsetDate": "Onset date",
   "operatingDoctor": "Operating Doctor",
   "optional": "Optional",
-  "orientacion": "Orientación y consejería",
-  "orinaElimination": "Eliminación de orina",
+  "orientacion": "Guidance and counseling",
+  "orinaElimination": "Urine elimination",
   "other": "Other",
   "otherRelationships": "Other Relationships",
   "otherSubstanceAbuse": "Other Substance Abuse",
@@ -367,66 +367,66 @@
   "paginationPageText_one": "of {{count}} pages",
   "paginationPageText_other": "of {{count}} pages",
   "paleness": "Severe palmar paleness",
-  "parentInformation": "Información a los padres",
-  "parto": "Parto",
-  "partoAborto": "Abortos",
-  "partoAlTermino": "Partos a término",
+  "parentInformation": "Parents information",
+  "parto": "Delivery",
+  "partoAborto": "Abortion",
+  "partoAlTermino": "Full-term deliveries",
   "partograph": "Partograph",
   "partographData": "Vital Components",
   "partographyDisplay": "Partography Displayed",
-  "partoNacidoVivo": "Nacidos vivos",
-  "partoPrematuro": "Partos prematuros",
+  "partoNacidoVivo": "Live births",
+  "partoPrematuro": "Preterm deliveries",
   "past": "Past",
   "patient": "Patient",
   "patientFamilyTable": "Patient family table",
   "patientNotFound": "Patient Not Found",
   "patientPlaceHolder": "Search patient",
-  "pending": "Pendiente",
-  "perfilBiofisico": "Perfil Biofísico",
+  "pending": "Pending",
+  "perfilBiofisico": "Biophysical Profile",
   "perinatalDataRecorded": "Perinatal Data Recorded",
   "perinatalDataSaveError": "Error saving perinatal data",
   "perinatalRegister": "Perinatal Maternal Carnet",
-  "pesoCorporal": "Peso Corporal (kg)",
-  "pesoMadre": "Peso Madre(kg)",
+  "pesoCorporal": "Body Weight (kg)",
+  "pesoMadre": "Maternal Weight (kg)",
   "phoneNumber": "Phone number",
   "phoneNumberPlaceholder": "Phone number",
   "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
   "physicalExam": "Physical Examination",
-  "PielYMucosas": "Piel y Mucosas",
-  "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de Parto (Control/Visita/No se hizo/NA)",
-  "planParto": "Plan de Parto",
+  "PielYMucosas": "Skin and Mucosa",
+  "Plan de Parto (Control/Visita/No se hizo/NA)": "Birth Plan (Check-up/Visit/Not done/N/A)",
+  "planParto": "Birth Plan",
   "pleaseFillField": "Please complete the required fields",
   "pnsAproach": "PNS Aproach",
-  "pnsContacts": "Parejas",
+  "pnsContacts": "Partners ",
   "populationType": "Population type",
-  "posición": "Posición (O/I/NA)",
+  "posición": "Position (O/I/NA)",
   "postnatalCare": "Postnatal Care",
   "postOperativeComplications": "Post Operative Complications",
   "postOperativeDiagnosis": "Post Operative Diagnosis",
   "pphCondition": "PPH present",
   "preferedPNSAproach": "Prefered PNS Aproach",
-  "prenatalAntecedents": "Antecedentes Prenatales",
-  "presentación": "Presentación (C/P/NA)",
-  "presionDiastolica": "Presión diastólica",
-  "presionSistolica": "Presión sistólica",
+  "prenatalAntecedents": " Prenatal History",
+  "presentación": "Presentation (C/P/NA)",
+  "presionDiastolica": "Diastolic Pressure",
+  "presionSistolica": "Systolic Pressure",
   "prev": "Prev",
   "previousMonth": "Previous month",
   "primaryDiagnosis": "Primary Diagnosis",
   "print": "Print",
   "priorityOfAdmission": "Priority Of Admission",
-  "proteinuriaGestacional": "Proteinuria gestacional",
+  "proteinuriaGestacional": "Gestational Proteinuria",
   "proximaCita": "Next Appointment",
   "psychomotorDevelopment": "Psychomotor Development",
-  "puerperioInmediato": "Puerperio Inmediato",
-  "PuerperioInmediato": "Puerperio Inmediato",
+  "puerperioInmediato": "Immediate Puerperium",
+  "PuerperioInmediato": "Immediate Puerperium",
   "recommendedProcedure": "Recommended Procedure",
-  "recordAnthropometrics": "Registrar Datos Antropométricos",
-  "recordFluidBalance": "Registrar Balance de Líquidos",
+  "recordAnthropometrics": "Record Anthropometris",
+  "recordFluidBalance": "Record fluid banlace",
   "recordLabourDetails": "Record labour details",
   "referral": "Referral",
   "referrals": "Referrals",
-  "reflejoOsteotendinoso": "Reflejo osteotendinoso",
-  "reflexIrritability": "Irritabilidad refleja",
+  "reflejoOsteotendinoso": "Deep tendon reflex",
+  "reflexIrritability": "Reflex irritability",
   "refreshing": "Refreshing...",
   "relation": "Relation",
   "relationship": "Relationship",
@@ -436,11 +436,11 @@
   "relationshipType": "Relationship Type",
   "relationToPatient": "Relation to patient",
   "remove": "Remove dose",
-  "removeVaccine": "Eliminar Vacuna",
+  "removeVaccine": "Remove vaccine",
   "required": "Required",
-  "respiratoryEffort": "Esfuerzo respiratorio",
+  "respiratoryEffort": "Respiratory Effort",
   "respiratoryRate": "Respiratory Rate (rpm)",
-  "resumenPartoPostparto": "Resumen de Parto y Postparto",
+  "resumenPartoPostparto": "Labor and Postpartum Summary",
   "riskFactors": "Risk Factors",
   "RlshipError": "Request Failed.......",
   "save": "Save",
@@ -450,49 +450,49 @@
   "saveError": "Error saving consultation",
   "saveReminder": "Remember to save your changes",
   "saveRlship": "Save Relationship",
-  "saveSchema": "Guardar Esquema",
+  "saveSchema": "Save schema",
   "saving": "Saving",
-  "scheduleVaccination": "Programar Cita de Vacunación",
+  "scheduleVaccination": "Schedule Vaccination",
   "searchConditions": "Search conditions",
   "searchHelper": "Search and select a vaccine to add",
   "searching": "Searching",
   "searchPatient": "Search patient",
-  "searchVaccine": "Buscar vacuna",
+  "searchVaccine": "Search vaccine",
   "seeAll": "See all",
   "seizures": "Seizures",
-  "selectDateAndTime": "Selecciona una fecha y hora para la cita",
+  "selectDateAndTime": "Select date and time",
   "selectVaccine": "Select Vaccine",
-  "selectValue": "Seleccione un valor",
+  "selectValue": "Select value",
   "service": "Service",
   "sex": "Sex",
   "sexualAssault": "3.Has he/she ever forced you to do something sexually that made you feel uncomfortable?",
   "show": "Show",
-  "SignosYsíntomasPrincipales": "Signos y síntomas principales",
-  "silvermanScore": "Puntuación de Silverman",
-  "situación": "Situación (L,T,NA)",
-  "skinColor": "Color de Piel",
+  "SignosYsíntomasPrincipales": "Main signs and symptoms",
+  "silvermanScore": "Silverman score",
+  "situación": "Situation (L,T,NA)",
+  "skinColor": "Skin color",
   "smoking": "Smoking",
   "smokingDuration": "Smoking Duration",
   "socialHistory": "Social History",
-  "spinalColumn": "Columna Vertebral",
-  "spinalColumnOther": "Otros para columna vertebral",
+  "spinalColumn": "spinal column",
+  "spinalColumnOther": "Other for spinal column",
   "startDate": "Start Date",
   "status": "Status",
   "statusAtDischarge": "Status at Discharge",
   "stoolCount": "Stool Count",
-  "stoolElimination": "Eliminación de heces",
+  "stoolElimination": "Stools elimination",
   "stoolGrams": "Stool Weight (g)",
   "submit": "Save and Close",
   "successfullyDeleted": "successfully deleted",
   "surgicalHistory": "Surgical History",
   "surgicalSummary": "Surgical Summary",
-  "sutures": "Suturas",
+  "sutures": "Sutures",
   "systolic": "Systolic",
   "systolicBP": "Systolic BP (mmHg)",
   "tableView": "Table View",
   "Talla": "Talla (cm)",
   "tbScreening": "TB screening outcome",
-  "temperatura": "Temperatura (C°)",
+  "temperatura": "Temperature °C",
   "temperature": "Temperature °C",
   "terminationDate": "Termination Date",
   "testApproach": "Approach",
@@ -501,7 +501,7 @@
   "testingRecommended": "Testing recommended",
   "testStrategy": "Strategy",
   "therapiesPrescribed": "Therapies Prescribed",
-  "thorax": "Tórax",
+  "thorax": "thorax",
   "threatened": "2. Has he/she ever threatened to hurt you?",
   "timeRecorded": "Time Recorded",
   "today": "Today",
@@ -511,31 +511,31 @@
   "treatment": "Treatment",
   "type": "Type",
   "typeOfSurgery": "Type of Surgery",
-  "umbilicalCord": "Cordón Umbilical",
+  "umbilicalCord": " Umbilical cord",
   "unknown": "Unknown",
   "unknownError": "An unknown error occurred",
   "unsavedChanges": "Unsaved Changes",
   "upcoming": "Upcoming",
   "upcomingAppointments": "Upcoming appointments",
-  "upcomingCheckups": "Próximos controles",
-  "update": "Actualizar",
+  "upcomingCheckups": "Upcoming checkups",
+  "update": "update",
   "updateError": "Error updating upcoming appointment",
   "updating": "Updating...",
   "urineCount": "Urine Count",
   "urineGrams": "Urine Volume (g/mL)",
   "uterineHeight": "Uterine Height (cm)",
   "uterusCondition": "PPH Condition of uterus",
-  "vaccinationSchedule": "Calendario de Vacunación",
-  "vaccinationScheduleBuilder": "Vaccination Schedule",
-  "vaccine": "Vacuna",
-  "validationInputError": "El valor debe estar entre {{min}} y {{max}}",
-  "value": "Valor",
+  "vaccinationSchedule": "Vaccination Schedule",
+  "vaccinationScheduleBuilder": "Vaccination Schedule Builder",
+  "vaccine": "vaccine",
+  "validationInputError": "The value must be between {{min}} and {{max}}",
+  "value": "Value",
   "viewEncounter": "View",
   "viewSelector": "Select view type",
-  "visitaDomiciliaria": "Visita domiciliaria",
+  "visitaDomiciliaria": "Home visit",
   "visitDate": "Screening Date",
   "vitalSigns": "Vital Signs",
-  "vitaminKAdmin": "Administración de Vitamina K",
+  "vitaminKAdmin": "Vitamin K administration",
   "vomitCount": "Vomit Count",
   "vomitGramsML": "Vomit Volume (g/mL)",
   "vomiting": "Vomits everything",
