feat: actualizar traducciones y mejorar la gestión del historial médico infantil

--- a/translations/es.json
+++ b/translations/es.json
@@ -467,7 +467,7 @@
   "service": "Servicio",
   "sex": "Sexo",
   "sexualAssault": "3. ¿Él/ella te obligó a hacer algo sexual que te hizo sentir incómodo?",
-  "show": "Espectáculo",
+  "show": "Mostrar",
   "SignosYsíntomasPrincipales": "Signos y Síntomas Principales",
   "silvermanScore": "Puntuacia de Silverman",
   "situación": "Situación (L, T, Na)",
