fix: corregir error tipográfico en la traducción de atención inmediata del recién nacido

--- a/translations/es.json
+++ b/translations/es.json
@@ -260,7 +260,7 @@
   "illnessDuration": "Duración de la enfermedad",
   "imc": "IMC - Índice de Masa Corporal",
   "immediateEvaluation": "Evaluación",
-  "immediateNewbornAttention": "Atentión In Mediata del Recién Nacido",
+  "immediateNewbornAttention": "Atención Inmediata del Recién Nacido",
   "immunization": "Inmunización",
   "immunizationPlanBuilder": "Gestión del plan de inmunización",
   "inactive": "Inactivo",
