(feat) agregado calaendario de vacunacion, falta tocar estilos

--- a/translations/es.json
+++ b/translations/es.json
@@ -82,8 +82,8 @@
   "cervicalDilation": "Dilación cervical CM",
   "chartView": "Vista de la tabla",
   "checkFilters": "Verifique los filtros anteriores",
-  "checkForValidity": "Algunos de los valores ingresados \u200b\u200bpueden no ser válidos",
-  "chestCircumference": "Perímetro Torácico (cm)",
+  "checkForValidity": "Algunos de los valores ingresados no son válidos",
+  "chestCircumference": "Perímetro Torácico",
   "chooseOption": "Elija la opción",
   "chronicDisease": "Enfermedad crónica",
   "clavicle": "Clavícula",
@@ -244,9 +244,9 @@
   "gravidez": "Gravidez",
   "growthChart": "Gráfico de crecimiento",
   "growthCondition": "Condición de crecimiento",
-  "headCircumference": "Perímetro Cefálico (cm)",
-  "heartRate": "Frecuencia cardíaca (BPM)",
-  "height": "Altura (cm)",
+  "headCircumference": "Perímetro Cefálico",
+  "heartRate": "Frecuencia cardíaca",
+  "height": "Altura",
   "heridaOperatoria": "Operatoria de Herida",
   "hip": "Cadera",
   "historiaClinicaObstetricaParto": "Historia clínica obstétrica de Parto",
@@ -297,7 +297,7 @@
   "maternalHistory": "Antecedentes matnos",
   "maternalPulse": "Pulso materna (BPM)",
   "maternalSummary": "Resumen materno",
-  "maternalWeight": "Peso materno (kg)",
+  "maternalWeight": "Peso materno",
   "medicalHistory": "Antecedentes médicos",
   "middleName": "Segundo nombre",
   "middleNamePlaceholder": "Segundo nombre",
@@ -540,7 +540,7 @@
   "vomitCount": "Recuento de vómitos",
   "vomitGramsML": "Volumen de vómito (g/ml)",
   "vomiting": "Vomita todo",
-  "weight": "Peso (kg)",
+  "weight": "Peso",
   "wellChildControls": "Buenos controles del niño",
   "Year": "Año",
   "Years": "Años",
